[package]
name = "stress-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
s2-sdk = "0.23.3"
clap = { version = "4.5.27", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
metrics-exporter-prometheus = "0.16.2"
metrics = "0.24.1"
eyre = "0.6.12"
rand = "0.9.0"
bytes = "1.9.0"
rustls = { version = "0.23.22", features = ["ring"] }
futures = "0.3.31"
axum = "0.8.1"
mimalloc = "0.1.43"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
