[project]
name = "stress-stream"
version = "0.1.0"
description = "Tool that stresses an S2 stream with append and read operations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.7",
    "prometheus-client>=0.21.1",
    "streamstore>=1.1.0",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = ["mypy>=1.14.1"]
